--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
+@import './assets/theme/components/buttons.scss';
+@import './assets/theme/components/navbar.scss';
+@import './assets/theme/variables';
+@import './assets/theme/typology.scss';
+
+
+
+
