--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <br-navbar></br-navbar>
 <router-outlet></router-outlet>
-
+<!--
 
 <h1>header 1</h1>
 <div class="row">
@@ -13,4 +13,4 @@
     </div>
 
   </div>
-</div>
+</div> -->
